Fix rows overflowing scrollbar.

--- a/imp/themes/default/dynamic/screen.css
+++ b/imp/themes/default/dynamic/screen.css
@@ -232,6 +232,7 @@ div.vpRowVert div.msgSubject span.flagUser {
 
 /* ViewPort - scroller */
 .vpScroll {
+    position: relative;
     background: url("../graphics/scroller_back.png") repeat-y;
 }
 .vpScrollCursor {
